Movie card styled with respective layout
A two column layout container for movies cards responsivei within 425px width

--- a/public/assets/app.css
+++ b/public/assets/app.css
@@ -545,6 +545,10 @@ body {
   --tw-backdrop-sepia:  ;
 }
 
+.m-\[0_auto\] {
+  margin: 0 auto;
+}
+
 .mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
@@ -555,12 +559,21 @@ body {
   margin-bottom: 1rem;
 }
 
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .mt-4 {
   margin-top: 1rem;
 }
 
 .flex {
   display: flex;
+}
+
+.grid {
+  display: grid;
 }
 
 .h-\[31px\] {
@@ -575,12 +588,52 @@ body {
   width: 100%;
 }
 
+.max-w-\[175\] {
+  max-width: 175;
+}
+
+.max-w-\[175px\] {
+  max-width: 175px;
+}
+
+.max-w-\[189px\] {
+  max-width: 189px;
+}
+
+.max-w-\[185px\] {
+  max-width: 185px;
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
 .items-center {
   align-items: center;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.gap-4 {
+  gap: 1rem;
 }
 
 .overflow-hidden {
@@ -589,6 +642,19 @@ body {
 
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
+.rounded-none {
+  border-radius: 0px;
+}
+
+.rounded-s {
+  border-start-start-radius: 0.25rem;
+  border-end-start-radius: 0.25rem;
 }
 
 .bg-\[transparent\] {
@@ -638,18 +704,13 @@ body {
   padding-right: 1.25rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.text-center {
+  text-align: center;
 }
 
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
-}
-
-.font-extrabold {
-  font-weight: 800;
 }
 
 .font-black {
