ALMOVIE app now be able to retrieve trending movies from themoviedb's API
This API grant me the 20 trending movies from day to day.

--- a/public/assets/app.css
+++ b/public/assets/app.css
@@ -545,10 +545,6 @@ body {
   --tw-backdrop-sepia:  ;
 }
 
-.m-\[0_auto\] {
-  margin: 0 auto;
-}
-
 .mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
@@ -559,13 +555,16 @@ body {
   margin-bottom: 1rem;
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .mt-4 {
   margin-top: 1rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
 }
 
 .flex {
@@ -588,48 +587,20 @@ body {
   width: 100%;
 }
 
-.max-w-\[175\] {
-  max-width: 175;
-}
-
-.max-w-\[175px\] {
-  max-width: 175px;
-}
-
-.max-w-\[189px\] {
-  max-width: 189px;
-}
-
-.max-w-\[185px\] {
-  max-width: 185px;
+.cursor-auto {
+  cursor: auto;
 }
 
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
-.flex-row {
-  flex-direction: row;
-}
-
-.flex-col {
-  flex-direction: column;
-}
-
 .items-center {
   align-items: center;
 }
 
-.justify-center {
-  justify-content: center;
-}
-
 .justify-between {
   justify-content: space-between;
-}
-
-.gap-1 {
-  gap: 0.25rem;
 }
 
 .gap-4 {
@@ -642,19 +613,6 @@ body {
 
 .rounded-lg {
   border-radius: 0.5rem;
-}
-
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
-.rounded-none {
-  border-radius: 0px;
-}
-
-.rounded-s {
-  border-start-start-radius: 0.25rem;
-  border-end-start-radius: 0.25rem;
 }
 
 .bg-\[transparent\] {
@@ -761,4 +719,13 @@ body {
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.active\:border-2:active {
+  border-width: 2px;
+}
+
+.active\:border-sky-500:active {
+  --tw-border-opacity: 1;
+  border-color: rgb(14 165 233 / var(--tw-border-opacity));
 }
