Trends Movies pages now have description, genrers and rating
Movies info are taken from THEMOVIEDB api to show the rating, overview and genrers from each movie.

--- a/src/input.css
+++ b/src/input.css
@@ -18,3 +18,9 @@
   background-color: #057aff;
   border-radius: 50%;
 }
+
+.genre::before {
+  content: "🟡 ";
+  font-size: 8px;
+  vertical-align: middle;
+}
