--- a/src/input.css
+++ b/src/input.css
@@ -24,3 +24,22 @@
   font-size: 8px;
   vertical-align: middle;
 }
+
+.fancy-link {
+  text-decoration: none;
+  background-image: linear-gradient(90deg, white, gray);
+  background-size: 0% 4px;
+  background-repeat: no-repeat;
+  background-position: left 1.5em;
+  padding-block: 0.25em;
+
+  transition:
+    color 300ms,
+    background-size 300ms;
+}
+
+.fancy-link:hover,
+.fancy-link:focus {
+  color: #057aff;
+  background-size: 100% 3px;
+}
