--- a/src/input.css
+++ b/src/input.css
@@ -75,3 +75,16 @@
   height: 500px;
   box-shadow: 0px -200px 110px 0px rgba(0, 0, 0, 0.7) inset;
 }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.fade-in {
+  animation: fadeIn 0.5s ease-in 0.1s forwards;
+}
